--- a/seng438-a4-7.md
+++ b/seng438-a4-7.md
@@ -10,7 +10,7 @@
 |                | Michele Pham    |
 
 # Introduction
-
+This assignment is completed in two parts. The first is about mutation testing where students learn how to use a mutation testing tool, inject mutation faults in Java code-base, how to evaluate the returned mutation scores, how to apply that information to create new test cases to improve the quality of the test suite. The second part is focussed on GUI testing using Selenium to learn about GUI testing automation, record, and replay. This tool will be compared to another tool. 
 
 # Analysis of 10 Mutants of the Range class 
 
