--- a/seng438-a4-7.md
+++ b/seng438-a4-7.md
@@ -13,9 +13,168 @@
 This assignment is completed in two parts. The first is about mutation testing where students learn how to use a mutation testing tool, inject mutation faults in Java code-base, how to evaluate the returned mutation scores, how to apply that information to create new test cases to improve the quality of the test suite. The second part is focussed on GUI testing using Selenium to learn about GUI testing automation, record, and replay. This tool will be compared to another tool. 
 
 # Analysis of 10 Mutants of the Range class 
+## Range.combine(Range range1, Range range2)
+PIT produced mutants for the first “if condition” in this method which is:
+
+    if (range1 == null){ 
+      return range2; 
+    } 
+
+##### 1. negated conditional → KILLED
+The first mutant is “negated conditional” which was killed and this means that the mutant introduced in our if condition was: 
+
+    if(range1 != null){ 
+      return range2; 
+    }
+
+The mutant was killed because we had a test to check if range1 != null, then the method would return a combined range and not just range2.  
+
+The test that killed this mutant was:  
+
+    @Test 
+    public void getCombineTest() {  
+      Range combined = new Range(-99995.875, 139995.875); 
+      assertEquals(combined, Range.combine(exampleRange, largeRange)); 
+    } 
+
+##### 2. removed conditional - replaced equality check with false → KILLED
+The second mutant is “removed conditional” which was killed and this means that the mutant introduced in our if condition was: 
+
+    if(false){ 
+      return range2; 
+    } 
+
+The mutant was killed because we had a case to test if range1 is null, then the value should be range2 not a combined range.  
+
+The test to kill this mutant was:  
+
+    @Test 
+    public void getCombineRange1NullTest() {  
+      assertEquals(largeRange, Range.combine(null, largeRange)); 
+    } 
+
+##### 3. removed conditional - replaced equality check with true → KILLED
+The third mutant is “removed conditional” which was killed and this means that the mutant introduced in our if condition was: 
+
+    if(true){ 
+      return range2; 
+    } 
+
+The mutant was killed because we had a test to check if range1 has a valid input, then the method would return a combined range and not just range2.  
+
+The test that killed this mutant was:  
+
+    @Test 
+    public void getCombineTest() {  
+      Range combined = new Range(-99995.875, 139995.875); 
+      assertEquals(combined, Range.combine(exampleRange, largeRange)); 
+    } 
+
+##### 4. not equal to equal → KILLED
+The fourth mutant is “not equal to equal” which was killed and this means that the mutant introduced in our if condition was: 
+
+    if(!(range1==null)){ 
+      return range2; 
+    } 
+
+This mutant was killed because we have a case that tests if range1 is not null, it should return a combined range, not just range2.  
+
+The test that killed this mutant was:  
+
+    @Test 
+    public void getCombineTest() {  
+    Range combined = new Range(-99995.875, 139995.875); 
+    assertEquals(combined, Range.combine(exampleRange, largeRange)); 
+    } 
+    
+## Range.scale(Range base, double factor)
+PIT produced the following mutants for the first “if condition” in this method which is:
+    if (factor < 0) {
+       throw new IllegalArgumentException("Negative 'factor' argument.");
+    }
+
+###### 5. changed conditional boundary → SURVIVED
+This mutant is “changed conditional boundary” which SURVIVED and this means that the mutant introduced in our if condition was:
+
+    if (factor <= 0)
+
+This mutant survived since we did not have a case where we had the value of factor at zero which is at the boundary.
+
+##### 6. substituted 0.0 with 1.0 → SURVIVED
+This mutant is “substituted 0.0 with 1.0” which SURVIVED and this means that the mutant introduced in our if condition was:
+
+    if (factor < 1.0)
+
+This mutant survived since we did not have a case where we had the value of factor as 1.0 which is double unlike in our case we used an integer.
+
+##### 7. negated conditional → KILLED
+This mutant is “negated conditional” was KILLED and this means that the mutant introduced in our if condition was:
+
+    if (factor >= 0)
+
+This mutant was killed because of the test case that we designed which is:
+    @Test
+    public void scaleTestGreaterThan0() {
+    Range expected = new Range(2,2);
+        assertEquals(expected, Range.scale(expected, 1));
+    }
+
+##### 8. removed conditional - replaced comparison check with false → KILLED
+This mutant is “removed conditional - replaced comparison check with false” which was KILLED and this means that the mutant introduced in our if condition was:
+
+    if (false)
+
+This mutant was killed because of the test cases that we had, which are as follows:
+
+    @Test(expected = IllegalArgumentException.class)
+    public void scaleTest() {
+      Range expected = new Range(2,2);
+      assertEquals(expected, Range.scale(expected, -1));
+    }
+    
+    @Test
+    public void scaleTestGreaterThan0() {
+      Range expected = new Range(2,2);
+      assertEquals(expected, Range.scale(expected, 1));
+    }
+##### 9. removed conditional - replaced comparison check with true → KILLED
+This mutant is “removed conditional - replaced comparison check with true” which was KILLED and this means that the mutant introduced in our if condition was:
+
+    if (true)
+
+This mutant was killed because of the test cases that we had. Which are as follows:
+    @Test(expected = IllegalArgumentException.class)
+    public void scaleTest() {
+      Range expected = new Range(2,2);
+      assertEquals(expected, Range.scale(expected, -1));
+    }
+    
+    @Test
+    public void scaleTestGreaterThan0() {
+      Range expected = new Range(2,2);
+      assertEquals(expected, Range.scale(expected, 1));
+    }
+
+##### 10. negated double local variable number 1 → KILLED
+This mutant is “Negated double local variable number 1” which was KILLED and this means that the mutant introduced in our if condition was:
+
+    if (-factor < 0)
+
+This mutant was killed because of the test cases that we had. Which are as follows:
+
+    @Test(expected = IllegalArgumentException.class)
+    public void scaleTest() {
+      Range expected = new Range(2,2);
+      assertEquals(expected, Range.scale(expected, -1));
+    }
+    @Test
+    public void scaleTestGreaterThan0() {
+      Range expected = new Range(2,2);
+      assertEquals(expected, Range.scale(expected, 1));
+    }
 
 # Report all the statistics and the mutation score for each test class
-
+***CARTERRRRR***
 
 
 # Analysis drawn on the effectiveness of each of the test classes
@@ -30,12 +189,12 @@ This assignment is completed in two parts. The first is about mutation testing w
 
 # Explain the use of assertions and checkpoints
 
-# how did you test each functionaity with different test data
+# How did you test each functionaity with different test data
 
 # Discuss advantages and disadvantages of Selenium vs. Sikulix
 
 # How the team work/effort was divided and managed
-
+The team met up and discussed the lab assignment before dividing tasks. Since running the PIT mutation tool worked only on some members' computers and not others, it was difficult to get started and divide tasks. To progress, members who were able to view Pit mutation reports, 
 
 # Difficulties encountered, challenges overcome, and lessons learned
 
