--- a/seng438-a4-7.md
+++ b/seng438-a4-7.md
@@ -174,7 +174,7 @@ This mutant was killed because of the test cases that we had. Which are as follo
     }
 
 # Report all the statistics and the mutation score for each test class
-***CARTERRRRR***
+***CARTERRRRR :)***
 
 
 # Analysis drawn on the effectiveness of each of the test classes
@@ -184,6 +184,11 @@ This mutant was killed because of the test cases that we had. Which are as follo
 # A discussion of what could have been done to improve the mutation score of the test suites
 
 # Why do we need mutation testing? Advantages and disadvantages of mutation testing
+Mutation testing is used to test the quaility of the test suite. It is done to see how well the tests created perform, even when there is mutated code. This can result in adjustments to previously written tests or creation of more tests for better coverage. 
+
+One of the advantages of mutation testing is that it will result in a better test suite by identifying weak test cases that were unable to kill mutants. It also results in an increase in code coverage of the source code. Ultimately, testing with mutations helps the team evaluate the quality of the source code. 
+
+One disadvantage is that it is very time consuming. In addition to this, mutation testing can only be done for white box testing as the source code is needed to do mutation testing. This type of testing shuold be automated with some tool or this method would be very difficult. It seems to only be practical for smaller and simpler code. For larger code, mutation testing becomes impractical. 
 
 # Explain your SELENUIM test case design process
 
@@ -194,8 +199,10 @@ This mutant was killed because of the test cases that we had. Which are as follo
 # Discuss advantages and disadvantages of Selenium vs. Sikulix
 
 # How the team work/effort was divided and managed
-The team met up and discussed the lab assignment before dividing tasks. Since running the PIT mutation tool worked only on some members' computers and not others, it was difficult to get started and divide tasks. To progress, members who were able to view Pit mutation reports, 
+The team met up and discussed the lab assignment before dividing tasks. Since running the PIT mutation tool worked only on some members' computers and not others, it was difficult to get started and divide tasks. To progress, members who were able to view Pit mutation reports, shared their reports so that the other members could evaluate and explain why or why not the test has killed the bug or has allowed the bug to survive. For GUI testing, the group individually completed their tasks, but  the group met up with each other so that everyone could verify work and ensure we were all on the same page. 
 
 # Difficulties encountered, challenges overcome, and lessons learned
+Using the new tools took some time to become familiar with them. Similar to previous labs, the instructions were vague but the group was able to figure out how to use the tools and complete tasks with time. As previously mentioned, Pit testing did not work on all devices. This was a challenge, but the group worked together to overcome this problem. The main lesson learned from this lab was how to use different testing tools and what mutation/GUI testing is like. 
 
 # Comments/feedback on the lab itself
+The lab itself was great practice and allowed the group to become familiar with industry tools. Although the lab guidlines were vague at some parts, it was written better than past guidelines since the group was less confused about what was expected from the lab. Some of the provided files caused problems in Eclipse and made the process more difficult. The lab itself was manageable. 
