--- a/seng438-a4-7.md
+++ b/seng438-a4-7.md
@@ -191,12 +191,16 @@ One of the advantages of mutation testing is that it will result in a better tes
 One disadvantage is that it is very time consuming. In addition to this, mutation testing can only be done for white box testing as the source code is needed to do mutation testing. This type of testing shuold be automated with some tool or this method would be very difficult. It seems to only be practical for smaller and simpler code. For larger code, mutation testing becomes impractical. 
 
 # Explain your SELENUIM test case design process
+The group got together and discussed common functionalities that can be done on the Amazon webiste. Then, we decided to divide up the 10 functionalities that we have identified. Once test scripts were created for the functionaliies, each member ran their tests again to see whether the test would pass again or not. For those that did not pass, the group discussied it to further understand why running the test scripts is different than recording the test script. For example, one functionality a member tested was REGISTER. Recording on Selenium to create the test script worked because we are ceating a new account and inserting data into the database that Amazon has never seen before. However, when we run the scripted test that Selenium recorded, it does not pass since the inputs are the same, which means that the user is already in the system and registration will not work. Members also tried using different inputs to see if the test will pass or not. 
 
 # Explain the use of assertions and checkpoints
+Assertions and checkpoints are used to state that the application behaves how it is expected to. These are helpful since they help testers know if the tests have passed or failed and why. Essentially, they help with verification. Verification is generally done automatically by the tool, which it is by Selenium. 
 
 # How did you test each functionaity with different test data
+***** FARICAAA*****
 
 # Discuss advantages and disadvantages of Selenium vs. Sikulix
+
 
 # How the team work/effort was divided and managed
 The team met up and discussed the lab assignment before dividing tasks. Since running the PIT mutation tool worked only on some members' computers and not others, it was difficult to get started and divide tasks. To progress, members who were able to view Pit mutation reports, shared their reports so that the other members could evaluate and explain why or why not the test has killed the bug or has allowed the bug to survive. For GUI testing, the group individually completed their tasks, but  the group met up with each other so that everyone could verify work and ensure we were all on the same page. 
