Finished my section of the report and further modified the test files for better results

--- a/seng438-a4-7.md
+++ b/seng438-a4-7.md
@@ -174,21 +174,38 @@ This mutant was killed because of the test cases that we had. Which are as follo
     }
 
 # Report all the statistics and the mutation score for each test class
-***CARTERRRRR :)***
+### After modifying the test cases we observe the following scores
+![img.png](/media/img.png)
+![img_1.png](/media/img_1.png)
 
+### And before modifying the test cases we observe the following scores as a comparison
+![img_2.png](/media/img_2.png)
+![img_3.png](/media/img_3.png)
 
 # Analysis drawn on the effectiveness of each of the test classes
+Both the test class for DataUtilities and the test class for Range are effective test classes. With DataUtilitiesTest we see 100% mutation coverage, which means that this test file would be suitable as a scripted set of tests. 
+For RangeTest we see 95% mutation coverage, where only equivalent mutants are left uncaught. This would also be a suitable test suite for automated testing.
+As well, some equivalent mutants hint at ways to further simplify and optimize the methods under test.
 
 # A discussion on the effect of equivalent mutants on mutation score accuracy
+Very few equivalent mutants were found during mutation testing, one notable find is within the public double constrain(double value) method in Range. The boundary value mutant that modifies the expressions in lines 190 & 193 changes a > to >=, and < to <=. This does not affect the function of the method since we have already checked if the value exists within the range. So that code becomes unreachable if you are trying to test what would happen if value = this.upper or this.lower.
+
+As well, the public static Range expandToInclude(Range range, double value) method in Range has two equivalent mutants for similar reasons. when the value < range.getLowerBound() becomes <= the resulting behaviour is as we expect. It doesn't modify the functionality of the method and is therefore uncaught.
+
+Another equivalent mutant that we discovered was the if (lower > upper) in public static Range expand(Range, double, double). if lower >= upper the same behaviour is observed. (You can do that math to check it, I did)
+
+The last equivalent mutant that we found was within the shiftWithNoZeroCrossing function where if value = 0.0 changing the first if statement to >= 0 from > 0 causes the same behaviour.
+In this case, the mutant is useful because this class can be further simplified. Instead of if, else if, else we can change the first if to >= 0 and the else if becomes an else statement instead and the same behaviour is observed.
 
 # A discussion of what could have been done to improve the mutation score of the test suites
+Nothing could have been done to further improve the mutation score of the test suite.
 
 # Why do we need mutation testing? Advantages and disadvantages of mutation testing
-Mutation testing is used to test the quaility of the test suite. It is done to see how well the tests created perform, even when there is mutated code. This can result in adjustments to previously written tests or creation of more tests for better coverage. 
+Mutation testing is used to test the quality of the test suite. It is done to see how well the tests created perform, even when there is mutated code. This can result in adjustments to previously written tests or creation of more tests for better coverage. 
 
 One of the advantages of mutation testing is that it will result in a better test suite by identifying weak test cases that were unable to kill mutants. It also results in an increase in code coverage of the source code. Ultimately, testing with mutations helps the team evaluate the quality of the source code. 
 
-One disadvantage is that it is very time consuming. In addition to this, mutation testing can only be done for white box testing as the source code is needed to do mutation testing. This type of testing shuold be automated with some tool or this method would be very difficult. It seems to only be practical for smaller and simpler code. For larger code, mutation testing becomes impractical. 
+One disadvantage is that it is very time-consuming. In addition to this, mutation testing can only be done for white box testing as the source code is needed to do mutation testing. This type of testing shuold be automated with some tool or this method would be very difficult. It seems to only be practical for smaller and simpler code. For larger code, mutation testing becomes impractical. 
 
 # Explain your SELENUIM test case design process
 The group got together and discussed common functionalities that can be done on the Amazon webiste. Then, we decided to divide up the 10 functionalities that we have identified. Once test scripts were created for the functionaliies, each member ran their tests again to see whether the test would pass again or not. For those that did not pass, the group discussied it to further understand why running the test scripts is different than recording the test script. For example, one functionality a member tested was REGISTER. Recording on Selenium to create the test script worked because we are ceating a new account and inserting data into the database that Amazon has never seen before. However, when we run the scripted test that Selenium recorded, it does not pass since the inputs are the same, which means that the user is already in the system and registration will not work. Members also tried using different inputs to see if the test will pass or not. 
