--- a/seng438-a4-7.md
+++ b/seng438-a4-7.md
@@ -217,7 +217,7 @@ Assertions and checkpoints are used to state that the application behaves how it
 ***** FARICAAA*****
 
 # Discuss advantages and disadvantages of Selenium vs. Sikulix
-
+The group tried using both Selenium and Sikulix, and we have agreed that Selenium is significantly easier to use since actions/commands are recorded for us. With Sikulix, manual insertions of commands makes GUI testing much less efficient. However, based on our research, Sikulix can be used on other softwares such as desktop applications, not just on websites, which is one disadvantage Selenium has compared to Sikulix. This means that Sikulix is able to automate tests based on the GUI on the screen. Another major difference the group noticed was that while Selenium recorded actions, Sikulix uses image recognition. On the flip side, Selenium also records user input and can read text, which is something that the group noticed Sikulix could not do. One disadvantage that Sikulix has is that assertions and checkpoints will have to be manually entered-- is it not automated, unlike Selenium. In terms of ease of use, Selenium is preferred, but it also has its own drawbacks. Sikulix can be used on a variety of applications and on web tests, but it does less automation and is less efficient in web UI testing.    
 
 # How the team work/effort was divided and managed
 The team met up and discussed the lab assignment before dividing tasks. Since running the PIT mutation tool worked only on some members' computers and not others, it was difficult to get started and divide tasks. To progress, members who were able to view Pit mutation reports, shared their reports so that the other members could evaluate and explain why or why not the test has killed the bug or has allowed the bug to survive. For GUI testing, the group individually completed their tasks, but  the group met up with each other so that everyone could verify work and ensure we were all on the same page. 
