--- a/seng438-a4-7.md
+++ b/seng438-a4-7.md
@@ -214,7 +214,7 @@ The group got together and discussed common functionalities that can be done on 
 Assertions and checkpoints are used to state that the application behaves how it is expected to. These are helpful since they help testers know if the tests have passed or failed and why. Essentially, they help with verification. Verification is generally done automatically by the tool, which it is by Selenium. 
 
 # How did you test each functionaity with different test data
-***** FARICAAA*****
+To test each functionality with different test data, we created a new test to test the same functionality with different data. This can be shown for testing the login in function. We have two tests for login: one for when password is correct and another one for when password is incorrect. This was done because Selenium records text inputs for each test, so two tests must be created with different test inputs to test both sides of the functionality. 
 
 # Discuss advantages and disadvantages of Selenium vs. Sikulix
 The group tried using both Selenium and Sikulix, and we have agreed that Selenium is significantly easier to use since actions/commands are recorded for us. With Sikulix, manual insertions of commands makes GUI testing much less efficient. However, based on our research, Sikulix can be used on other softwares such as desktop applications, not just on websites, which is one disadvantage Selenium has compared to Sikulix. This means that Sikulix is able to automate tests based on the GUI on the screen. Another major difference the group noticed was that while Selenium recorded actions, Sikulix uses image recognition. On the flip side, Selenium also records user input and can read text, which is something that the group noticed Sikulix could not do. One disadvantage that Sikulix has is that assertions and checkpoints will have to be manually entered-- is it not automated, unlike Selenium. In terms of ease of use, Selenium is preferred, but it also has its own drawbacks. Sikulix can be used on a variety of applications and on web tests, but it does less automation and is less efficient in web UI testing.    
